tests/miniJava/neg/003821_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( return 0 ) { } else { } } }
